Java 17 & dep updates